# sgi-dashboard-conprem

./: .gitignore  DEPLOY_STREAMLIT_CLOUD.md  INSTRUCTIVO_DASHBOARD_SGI.md  MAIL_ACCESO_DASHBOARD.md  PROPUESTA_TECNICA_ECONOMICA_SGI.md  README.md  access_log.csv  pyproject.toml  requirements.txt
.kiro/specs/sgi-audit-dashboard/: .config.kiro  design.md  requirements.md  tasks.md
.streamlit/: config.toml
data/: informe_hallazgos.md
src/: __init__.py  app.py  export.py  metrics.py  models.py  parser.py  pretty_printer.py
src/dashboard/: __init__.py  custom_css.py  executive_summary.py  filters.py  findings_table.py  heatmap.py  hts_panel.py  pareto.py  proposal_viewer.py  radar.py  strategic_plan.py  theme.py  timeline.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_executive_summary.py  test_export.py  test_filters.py  test_findings_table.py  test_metrics.py  test_parser.py  test_pretty_printer.py  test_theme.py
